k8s-efk-kafka/ingress-rule.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui
  namespace: hadi
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '8'
spec:
  ingressClassName: nginx
  rules:
  - host: kafka.hasti.co
    http:
      paths:
      - backend:
          service:
            name: kafka-ui
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kafka.hasti.co
    secretName: hasti-tls
